--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,7 @@
 
   "browser_action": {
     "default_icon": "icon.png",
+    "default_popup": "popup.html"
   },
   "permissions": [
     "activeTab",
