--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,13 @@
   "name": "Shop Seashell",
   "description": "Determines if site user is currently on is paired with Seashell",
   "version": "1.0",
+  
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": false
+  },
 
-  "browser_action": {
+  "page_action": {
     "default_icon": "icon.png",
     "default_popup": "popup.html",
     "default_title": "Shop Seashell"
