--- a/manifest.json
+++ b/manifest.json
@@ -3,19 +3,26 @@
   "name": "Shop Seashell",
   "description": "Determines if site user is currently on is paired with Seashell",
   "version": "1.0",
-  
+
   "background": {
     "scripts": ["background.js"],
     "persistent": false
   },
 
   "page_action": {
-    "default_icon": "icon.png",
+    "default_icon": "icon19.png",
     "default_popup": "popup.html",
     "default_title": "Shop Seashell"
   },
-  "permissions": [
+  
+  "permissions" : [
+    "tabs",
     "activeTab",
     "background"
-  ]
+  ],
+
+  "icons": {
+    "48" : "icon48.png",
+    "128" : "icon128.png"
+  }
 }
